--- a/service/pyproject.toml
+++ b/service/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "armoreddjango"
+name = "aiqfome"
 version = "0.1.0"
 description = ""
 authors = [
@@ -37,7 +37,8 @@ dependencies = [
     "sqlparse (==0.5.3)",
     "watchdog (==6.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "drf-yasg (>=1.21.11,<2.0.0)"
+    "drf-yasg (>=1.21.11,<2.0.0)",
+    "pytest (>=8.4.2,<9.0.0)"
 ]
 
 [build-system]
