feat: Refactor user model and authentication endpoints
- Changed user model from Profile to Customer with additional fields.
- Updated migrations to reflect changes in user model.
- Created new API endpoints for customer registration and management.
- Implemented Favorites feature with caching for authenticated users.
- Added serializers for Customer and Favorites models.
- Updated admin interface for Customer management.
- Enhanced caching mechanisms for product retrieval from FakeStore API.
- Removed deprecated Endpoints.py file and cleaned up related code.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,5 +26,26 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
+  lint:
+    container_name: aiqfome_lint
+    build:
+      context: ./service
+      dockerfile: Dockerfile
+    command: /bin/sh -c "service/scripts/start-lint.sh service/src"
+    volumes:
+      - .:/app
+    env_file: '.env'
+    restart: on-failure
+    
+  test:
+    container_name: aiqfome_test
+    build:
+      context: ./service
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    env_file: '.env'
+    command: /bin/sh -c "service/scripts/run_unit_tests.sh"
+    
 volumes:
   postgres_data:
