--- a/service/pyproject.toml
+++ b/service/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "watchdog (==6.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "drf-yasg (>=1.21.11,<2.0.0)",
-    "pytest (>=8.4.2,<9.0.0)"
+    "pytest (>=8.4.2,<9.0.0)",
+    "uuid_v7 (==1.0.0)"
 ]
 
 [build-system]
