feat: Atualiza o README.md com informações sobre variáveis de ambiente e endpoints; refatora scripts de lint e ajusta cache de favoritos

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
     depends_on:
       - db
     env_file: '.env'
-    command: /bin/sh -c "service/scripts/run_unit_tests.sh"
+    command: /bin/sh -c "scripts/run_unit_tests.sh"
     
 volumes:
   postgres_data:
