--- a/service/pyproject.toml
+++ b/service/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "drf-yasg (>=1.21.11,<2.0.0)",
     "pytest (>=8.4.2,<9.0.0)",
-    "uuid_v7 (==1.0.0)"
+    "uuid_v7 (==1.0.0)",
+    "pytest-django (>=4.11.1,<5.0.0)"
 ]
 
 [build-system]
@@ -48,3 +49,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
+
+[tool.isort]
+profile = "black"
